--- a/src/Page/Order/OrderList.css
+++ b/src/Page/Order/OrderList.css
@@ -1,9 +1,10 @@
-.orderlist{
+.orderlist {
   width: 80%;
-  margin:0 auto;
+  margin: 0 auto;
   align-items: center;
+  height: 100vh;
 }
 
-.backbutt{
+.backbutt {
   margin-left: 47%;
 }
